*Mon 17 Mar 2013 <john.pye@anu.edu.au> 0.20130317
- Update SCons build for renamed files eg HPGmatrix.c

*Sat Mar 9 2013 <.> 0.02100105
- frame3dd_io.c - fix bug in writing undeformed mesh with data check only

*Wed Mar 6 2013 <.> 0.02100105
- add error check on input data for unconnected nodes, with output error code 42

*Wed Feb 20 2013 <.> 0.02100105
- sourceforge upgrade:
- svn switch --relocate
- ... https://frame3dd.svn.sourceforge.net/svnroot/frame3dd
- ... https://svn.code.sf.net/p/frame3dd/code/

*Wed Feb 20 2013 <.> 0.02100105
- frame3dd_io.c and user-manual.html - update gnuplot to version 4.6 

*Mon Feb 11 2013 <.> 0.02100105
- frame3dd_io.c --- add comment in plot data files for element numbers

*Sat Feb 8 2013 <.> 0.02100105
- frame3dd_io.c --- add variable for gnuplot line width

*Tue Jan  22 2013 <.> 0.02100105
- NRutil.c --- change definition of save_ functions

*Thu Dec  6 20:02:21 EST 2012 <.> 0.02100105
- frame3dd_io.c --- improve handling of input data when nM=0 is omitted.
- frame3dd_io.c --- improve handling of missing flags in command line args

*Mon Nov 26 22:35:36 EST 2012 <.> 0.20100105
- add fixed end forces to reaction forces in frame3dd.c function add_feF().
- comment-out "set tickslevel 0" in frame3dd_io.c function animate() for
compatibility with gnuplot versions earlier than 4.6

*Wed Nov  7 2012 Henri Gavin <.> 0.20100105
- fix broken links to ansicon ...  http://adoxa.3eeweb.com/ansicon/

*Tue Nov  6 2012 Henri Gavin <.> 0.20100105
- add reference to Wai-Fah Chen's text on Structural Stability in the section of user-manual.html on second-order analysis.

*Fri Nov  2 2012 Henri Gavin <.> 0.20100105
- small edits to comments in main.c

*Tue Oct 30 2012 Henri Gavin <.> 0.20100105
- Cleaned up and documented Newton-Raphson code.  
- Improved documentation in the Numerical Details section.
- Set internal force data to zero at start of each load case. 

*Mon Oct 29 2012 Henri Gavin <.> 0.20100105