@@ -46,7 +46,7 @@ Henri P. Gavin, Ph.D., P.E., </font></i></p>
 <hr>
 <h1>FRAME3DD</h1>
 
-<h2>version 0.20100105 </h2>
+<h2>version 0.20130318 </h2>
 
 <!-- iframe src="version.html" width="250" height="30" style="border:solid 1pt grey"></iframe -->
 
@@ -3012,7 +3012,7 @@ Durham, NC  27708--0287
 </pre>
 
 <pre>
-<a href="http://pye.dyndns.org">John Pye</a>
+John Pye
 Dept of Engineering
 Australian National University
 </pre>
